fixing spacing and borders

--- a/public/css/style-dash.css
+++ b/public/css/style-dash.css
@@ -6,7 +6,6 @@ body {
 }
 
 .bar {
-  padding: 20px;
   padding-top: 5px;
   padding-bottom: 5px;
   margin: 0px;
@@ -42,8 +41,18 @@ img {
   border-width: 2px;
 }
 
-#sidebar li {
+#sidebar ul {
+  padding-left: 20px;
+  padding-right: 20px;
   
+}
+
+#sidebar div p {
+  text-align: center;
+  padding-top:10px;
+  padding-bottom:10px;
+  border-bottom-style: solid;
+  border-width: 2px;
 }
 
 #sidebar a {
